--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStockDetail.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStockDetail.cshtml
@@ -157,7 +157,7 @@
                 <div class="l-flex__item"></div>
             </section>
         </div>
-        <iframe id="SysJustIFRAME" width="100%" scrolling="no"></iframe>
+        <iframe id="SysJustIFRAME" width="100%" scrolling="no" frameborder="0" style="border:none"></iframe>
         @if (Model.USStock.HotProductTags != null && Model.USStock.HotProductTags.Any())
         {
             <div class="c-hashTags">
