--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
@@ -14,7 +14,7 @@
     return;
 }
 
-<div class="c-section">
+<div class="c-section" data-consultlist>
     <div class="c-section__content">
         <div class="c-tab c-tab--icon" data-tab="true" data-docking="false">
             <div class="c-tab__header">
