--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
@@ -545,16 +545,20 @@
                         </div>
                     </div>
 
-                    <div class="c-section">
-                        <div class="c-warning warningNotice"></div>
-                    </div>
+                    @if (!string.IsNullOrEmpty(Model.RecommendedProductContent))
+                    {
+                        <div class="c-section">
+                            <div class="c-warning tab1warningNotice u-hidden">
+                                @Html.Sitecore().Field(Template.Calculate.Fields.RecommendedProductContent.ToString(), Model.Datasource)
+                            </div>
+                        </div>
+                    }
 
                 </div>
 
                 <!-- 推薦基金 -->
                 <div class="c-section" id="tab1Fund">
                     <div class="c-section__title">推薦基金</div>
-                    <p class="tab1FundTip"></p>
                     <div class="c-section__content">
                         <div class="swiper c-swiper c-swiper--3rows recommendedFunds">
                             <div class="swiper-wrapper c-swiper__wrapper">
@@ -730,16 +734,20 @@
                         </div>
                     </div>
 
-                    <div class="c-section">
-                        <div class="c-warning warningNotice"></div>
-                    </div>
+                    @if (!string.IsNullOrEmpty(Model.RecommendedProductContent))
+                    {
+                        <div class="c-section">
+                            <div class="c-warning tab2warningNotice u-hidden">
+                                @Html.Sitecore().Field(Template.Calculate.Fields.RecommendedProductContent.ToString(), Model.Datasource)
+                            </div>
+                        </div>
+                    }
 
                 </div>
 
                 <!-- 推薦基金 -->
                 <div class="c-section" id="tab2Fund">
                     <div class="c-section__title">推薦基金</div>
-                    <p class="tab2FundTip"></p>
                     <div class="c-section__content">
                         <div class="swiper c-swiper c-swiper--3rows recommendedFunds">
                             <div class="swiper-wrapper c-swiper__wrapper">
@@ -915,16 +923,20 @@
                         </div>
                     </div>
 
-                    <div class="c-section">
-                        <div class="c-warning warningNotice"></div>
-                    </div>
+                    @if (!string.IsNullOrEmpty(Model.RecommendedProductContent))
+                    {
+                        <div class="c-section">
+                            <div class="c-warning tab3warningNotice u-hidden">
+                                @Html.Sitecore().Field(Template.Calculate.Fields.RecommendedProductContent.ToString(), Model.Datasource)
+                            </div>
+                        </div>
+                    }
 
                 </div>
 
                 <!-- 推薦基金 -->
                 <div class="c-section" id="tab3Fund">
                     <div class="c-section__title">推薦基金</div>
-                    <p class="tab3FundTip"></p>
                     <div class="c-section__content">
                         <div class="swiper c-swiper c-swiper--3rows recommendedFunds">
                             <div class="swiper-wrapper c-swiper__wrapper">
@@ -1100,16 +1112,20 @@
                         </div>
                     </div>
 
-                    <div class="c-section">
-                        <div class="c-warning warningNotice"></div>
-                    </div>
+                    @if (!string.IsNullOrEmpty(Model.RecommendedProductContent))
+                    {
+                        <div class="c-section">
+                            <div class="c-warning tab4warningNotice u-hidden">
+                                @Html.Sitecore().Field(Template.Calculate.Fields.RecommendedProductContent.ToString(), Model.Datasource)
+                            </div>
+                        </div>
+                    }
 
                 </div>
 
                 <!-- 推薦基金 -->
                 <div class="c-section" id="tab4Fund">
                     <div class="c-section__title">推薦基金</div>
-                    <p class="tab4FundTip"></p>
                     <div class="c-section__content">
                         <div class="swiper c-swiper c-swiper--3rows recommendedFunds">
                             <div class="swiper-wrapper c-swiper__wrapper">
@@ -1287,16 +1303,20 @@
                         </div>
                     </div>
 
-                    <div class="c-section">
-                        <div class="c-warning warningNotice"></div>
-                    </div>           
+                    @if (!string.IsNullOrEmpty(Model.RecommendedProductContent))
+                    {
+                        <div class="c-section">
+                            <div class="c-warning tab5warningNotice u-hidden">
+                                @Html.Sitecore().Field(Template.Calculate.Fields.RecommendedProductContent.ToString(), Model.Datasource)
+                            </div>
+                        </div>
+                    }
 
                 </div>
 
                 <!-- 推薦基金 -->
                 <div class="c-section" id="tab5Fund">
                     <div class="c-section__title">推薦基金</div>
-                    <p class="tab5FundTip"></p>
                     <div class="c-section__content">
                         <div class="swiper c-swiper c-swiper--3rows recommendedFunds">
                             <div class="swiper-wrapper c-swiper__wrapper">
@@ -2473,7 +2493,7 @@
                 // 每月投入金額
                 let monthlyInvestmentVal = parseFloat(monthlyInvestment) * 10000;
 
-                return formulajs.ROUNDUP(formulajs.RATE(yearsVal, -monthlyInvestmentVal, -amountPreparedVal, educationalFundVal, 0, 0.1) * 12, 4)
+                return formulajs.ROUNDUP(formulajs.RATE(yearsVal, -monthlyInvestmentVal, -amountPreparedVal, educationalFundVal) * 12, 4)
             };
             //#endregion
 
@@ -3487,25 +3507,22 @@
 
             //#region 更新風險屬性相關內容
             function UpdateRiskAttributesContent(risk) {
-                let imgSrc, warningText;
+                let imgSrc;
 
                 switch (risk) {
                     case "1":
                         defaultRiskAttributes = 2;
                         imgSrc = '@Model.ConservativeRiskImage';
-                        warningText = '@Model.ConservativeRiskNotice';
                         assetsData = conservativeAssetsData;
                         break;
                     case "2":
                         defaultRiskAttributes = 5;
                         imgSrc = '@Model.RobustRiskImage'
-                        warningText = '@Model.RobustRiskNotice';
                         assetsData = robustAssetsData;
                         break;
                     case "3":
                         defaultRiskAttributes = 7;
                         imgSrc = '@Model.PositiveRiskImage'
-                        warningText = '@Model.PositiveRiskNotice';
                         assetsData = positiveAssetsData;
                         break;
                     default:
@@ -3514,7 +3531,6 @@
                 }
 
                 $('.l-riskCard__charts img').attr('src', imgSrc);
-                $('.warningNotice').text(warningText.replace(/&#160;/g, ' '));
             }
             //#endregion
 
@@ -3625,12 +3641,12 @@
                                                         <div class="c-cardFund__trend">
                                                             <div class="c-cardFund__rate">
                                                                 <span class="t-small">
-                                                                    <span class="t-fall">月報酬率</span>
-                                                                    <span class="o-fall o-fall--sm">0%</span>
+                                                                    <span class="t-rise">月報酬率</span>
+                                                                    <span class="o-rise o-rise--sm">0%</span>
                                                                 </span>
                                                             </div>
                                                             <div class="c-cardFund__charts">
-                                                                <div class="o-charts o-charts--fall" data-chart="mini"></div>
+                                                                <div class="o-charts o-charts--rise" data-chart="mini"></div>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -3663,7 +3679,11 @@
 
                 var dataIsFormSitecore = fundData.some(item => item.DataIsFormSitecore);
 
-                $(`.${tab}FundTip`).text(dataIsFormSitecore ? '目前依績效評估，暫時無符合您需求之推薦標的，建議可參考下列本行推薦基金標的。' : '');
+                if (dataIsFormSitecore) {
+                    $(`.${tab}warningNotice`).removeClass('u-hidden');
+                } else {
+                    $(`.${tab}warningNotice`).addClass('u-hidden');
+                }
 
                 const $swiperWrapper = event;
                 $swiperWrapper.empty();
@@ -3673,7 +3693,7 @@
                 fundData.forEach((fund, index) => {
                     let SubscribeButtonHtml = '';
 
-                    if (fund.OneMonthReturnOriginalCurrency > 0) {
+                    if (fund.OneMonthReturnOriginalCurrency >= 0) {
                         style1 = "t-rise";
                         style2 = "o-rise o-rise--sm";
                         style3 = "o-charts--rise";
@@ -3795,7 +3815,7 @@
                 EtfData.forEach((Etf, index) => {
                     let SubscribeButtonHtml = '';
 
-                    if (Etf.MonthlyReturnNetValueOriginalCurrency > 0) {
+                    if (Etf.MonthlyReturnNetValueOriginalCurrency >= 0) {
                         style1 = "t-rise";
                         style2 = "o-rise o-rise--sm";
                         style3 = "o-charts--rise";
